[refactor] replace deprecated new Float